# full-stack-template

./: .coverage  .dockerignore  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  compose.yml  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: specification.agent.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
.github/prompts/: create-migration.prompt.md  entra-multi-tenant-integration.prompt.md
.github/skills/add-test-coverage/: README.md  SKILL.md
.github/skills/add-test-coverage/references/: CHECKLIST.md
.github/skills/add-test-coverage/templates/: backend-test-template.md  backend-test-template.py  frontend-test-template.tsx
.github/skills/scaffold-api-endpoint/: README.md  SKILL.md
.github/skills/scaffold-api-endpoint/references/: CHECKLIST.md
.github/skills/scaffold-api-endpoint/templates/: crud-template.md  crud-template.py  model-template.md  model-template.py  routes-template.md  routes-template.py  tests-template.md  tests-template.py
.github/workflows/: ci.yml  playwright-docker.yml  playwright.yml  test-backend.yml  test-docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  backend_pre_start.py  crud.py  crud_rbac.py  main.py  models.py  tests_pre_start.py  utils.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 4922ca24df61_initial.py  a1b2c3d4e5f6_add_task_table.py  d774176c44a3_add_file_table.py
backend/api/: deps.py  deps_rbac.py  main.py
backend/api/routes/: admin.py  auth_entra.py  files.py  items.py  login.py  notifications.py  private.py  rbac.py  tasks.py  users.py  utils.py
backend/app/: models.py
backend/app/alembic/versions/: 9ca0f5177345_add_microsoft_entra_models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth_entra.py  items.py  users.py  utils.py
backend/app/core/: auth_entra.py  config.py
backend/core/: auth_entra.py  config.py  db.py  queue.py  rbac.py  redis.py  security.py  storage.py  task_callbacks.py
backend/email-templates/src/: entra_account.mjml  new_account.mjml  reset_password.mjml  test_email.mjml
backend/scripts/: entrypoint.sh  prestart.sh  run-dev.sh  start-worker.sh  tests-start.sh
backend/static/: .gitkeep
backend/tasks/: __init__.py  example.py
backend/tests/: conftest.py  test_utils.py
backend/tests/api/: test_deps_rbac.py
backend/tests/api/routes/: test_admin_tasks.py  test_auth_entra.py  test_items.py  test_login.py  test_notifications.py  test_private.py  test_rbac.py  test_tasks.py  test_users.py  test_utils.py
backend/tests/crud/: test_rbac.py  test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py  user.py  utils.py
backend/utils/: backend_pre_start.py  initial_data.py  utils.py
docs/: DEV_SETUP.md  FEATURE_IDEAS.md  deployment.md  development.md  entra_setup.md
frontend/: README.md  biome.json  design-brief.json  index.html  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/auth/: entra.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: AddUser.tsx  columns.tsx
frontend/src/components/AdminDashboard/: Charts.tsx  JobsList.tsx  SampleTaskButtons.tsx  data.ts  index.ts
frontend/src/components/Auth/: EntraLogin.tsx
frontend/src/components/Common/: AuthLayout.tsx  ChartCard.tsx  DataTable.tsx  Footer.tsx  Logo.tsx  MetricCard.tsx  NotificationBell.tsx
frontend/src/components/Items/: columns.tsx
frontend/src/components/Sidebar/: AppSidebar.tsx  Main.tsx
frontend/src/components/UserSettings/: ChangePassword.tsx  UserInformation.tsx
frontend/src/components/ui/: badge.tsx  input.tsx  sidebar.tsx  table.tsx
frontend/src/hooks/: useAppConfig.ts  useAuth.ts  useCustomToast.ts  useEntraAuth.ts  useNotifications.ts
frontend/src/routes/: _layout.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
frontend/src/routes/_layout/: admin-tasks.tsx  admin.tsx  index.tsx  items.tsx  settings.tsx
frontend/tests/: items.spec.ts  reset-password.spec.ts  user-settings.spec.ts
frontend/tests/utils/: mailcatcher.ts
scripts/: dependency.sh  generate-client.sh  run-dev.sh  start-dev.sh
