[project]
name = "backend"
version = "0.1.0"
description = "Full stack template with FastAPI, SQLModel, and React"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.133.0,<1.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "tenacity>=9.1.4,<10.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "emails>=0.6,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "alembic>=1.18.4,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "sqlmodel>=0.0.37,<1.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "sentry-sdk[fastapi]>=2.53.0,<3.0.0",
    "pyjwt>=2.11.0,<3.0.0",
    "pwdlib[argon2,bcrypt]>=0.3.0,<1.0.0",
    "redis>=7.0.0,<8.0.0",
    "rq>=2.0.0,<3.0.0",
    "boto3>=1.35.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov",
    "testcontainers>=4.14.1",
    "fakeredis>=2.28.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "prek>=0.2.24,<1.0.0",
    "coverage<8.0.0,>=7.4.3",
    "pre-commit>=4.5.1,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
backend-path = ["backend"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic", "tests"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic", ".github", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
